extended the sending functionallity